--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@
 body {
     margin: auto;
     max-width: 1440px;
+    font-family: 'Gothic A1', sans-serif;
 }
 .first_page {
     margin: auto;
@@ -66,7 +67,7 @@ header {
     margin-top: 298px;
     color: white;
 }
-button {
+.button1 {
     width: 170px;
     height: 66px;
     background: #FC0A7E;
@@ -76,7 +77,7 @@ button {
     margin-top: 79px;
 }
 
-button:hover {
+.button1:hover {
     box-shadow: 0 0 12px #6633FF;
     -moz-box-shadow: 0 0 12px #6633FF;
     -o-box-shadow: 0 0 12px #6633FF;
@@ -285,12 +286,215 @@ button:hover {
     text-align: center;
     padding-top: 17px;
 }
-.pl-20 {
+.strip {
     padding-left: 20px;
+    padding-right: 20px;
+    max-width: 30px;
 }
 .brands {
     margin-top: 237px;
     display: block;
     margin-left: auto;
     margin-right: auto;
+}
+.iphones {
+    padding-top: 118px;
+    margin-bottom: -10px;
+}
+.six_page {
+    margin: auto;
+    max-width: 1440px;
+    background: url(../images/bg.png);
+    background-size: cover;
+}
+.bg_2 {
+    position: absolute;
+
+}
+.sixp_main {
+    padding-top: 165px;
+}
+.sixp_text {
+    font-weight: 400;
+    font-size: 38px;
+    line-height: 48px;
+    text-align: center;
+    color: #FFFFFF;
+}
+.buttons {
+    display: flex;
+    justify-content: space-between;
+    max-width: 371px;
+    padding-top: 40px;
+    margin: auto;
+    padding-bottom: 156px;
+}
+.button2 {
+    width: 190px;
+    height: 66px;
+    background: #FC0A7E;
+    border-radius: 3px;
+    color: white;
+    border: none;
+    position: relative;
+}
+
+.button2:hover {
+    box-shadow: 0 0 12px #FFFFFF;
+    -moz-box-shadow: 0 0 12px #FFFFFF;
+    -o-box-shadow: 0 0 12px #FFFFFF;
+    cursor: pointer;
+    -webkit-box-shadow: 0 0 12px #FFFFFF;
+}
+.button3 {
+    width: 171px;
+    height: 66px;
+    color: #FFFFFF;
+    background: none;
+    border: 1px solid #B04BB3;
+    box-sizing: border-box;
+    position: relative;
+}
+.button3:hover {
+    box-shadow: 0 0 12px #FFFFFF;
+    -moz-box-shadow: 0 0 12px #FFFFFF;
+    -o-box-shadow: 0 0 12px #FFFFFF;
+    cursor: pointer;
+    -webkit-box-shadow: 0 0 12px #FFFFFF;
+}
+.seven_page {
+    background-color: #1B1B1B;
+    margin: auto;
+    position: relative;
+}
+.sevp_content {
+    text-align: center;
+    padding-top: 129px;
+}
+.sevp_text {
+    font-weight: 400;
+    font-size: 38px;
+    line-height: 48px;
+    color: #FFFFFF;
+}
+.sevp_text2 {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 30px;
+    padding-top: 20px;
+    color: #6B6B6B;
+}
+.mail {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-top: 40px;
+}
+.mail_input {
+    width: 311px;
+    height: 70px;
+    border: none;
+    box-shadow: 0 0 0 #FC0A7E;
+    border-radius: 3px 0 0 3px;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 26px;
+    padding-left: 20px;
+
+}
+.mail_submit {
+    width: 154px;
+    height: 70px;
+    left: 66.99%;
+    right: -0.11%;
+    top: 0.02px;
+    border: none;
+    background: #FC0A7E;
+    border-radius: 0 3px 3px 0;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 26px;
+}
+.mail_submit:hover {
+    box-shadow: 0 0 12px #FFFFFF;
+    -moz-box-shadow: 0 0 12px #FFFFFF;
+    -o-box-shadow: 0 0 12px #FFFFFF;
+    cursor: pointer;
+    -webkit-box-shadow: 0 0 12px #FFFFFF;
+}
+footer {
+    margin-top: 126px;
+}
+.r {
+    padding-top: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: auto;
+}
+.r:hover {
+    -ms-transform: scale(1.2);
+    transform: scale(1.2);
+}
+.about {
+    padding-top: 29px;
+    padding-bottom: 69px;
+    margin: auto;
+    display: flex;
+    justify-content: center;
+}
+.about_items {
+    font-weight: 400;
+    font-size: 12px;
+
+    text-decoration: none;
+
+    color: #6B6B6B;
+    padding-right: 30px;
+    position: relative;
+    cursor: pointer;
+    line-height: 1;
+}
+.about_items:hover:after {
+    width: 70%;
+    text-align: center;
+}
+.about_items:after {
+    display: block;
+    position: absolute;
+    left: 0;
+    width: 0;
+    height: 3px;
+    background-color: #6B6B6B;
+    content: "";
+    transition: width 0.1s ease-out;
+    text-align: center;
+}
+.owl-dots {
+    position: relative;
+    width: 100%;
+    margin: auto;
+    left: 50%;
+}
+.owl-dot span{
+    display: inline-block;
+    width: 7px;
+    height: 7px;
+    background-color: #1B1B1B;
+}
+.owl-dot {
+
+    margin-left: 10px;
+    margin-top: 88px;
+}
+.owl-dot.active{
+    display: inline-block;
+    margin-left: 10px;
+    margin-top: 88px;
+}
+.owl-dot.active span {
+    display: inline-block;
+    width: 7px;
+    height: 7px;
+    background-color: #22222266;
 }
