--- a/css/media.css
+++ b/css/media.css
@@ -230,8 +230,34 @@
         justify-content: center;
         padding-left: 10px;
     }
+    .sixp_text {
+        padding-top: 168px;
+        font-weight: 400;
+        font-size: 20px;
+        line-height: 48px;
+        text-align: center;
+        color: #FFFFFF;
+    }
+    .button3 {
+        width: 140px;
+        height: 46px;
+        color: #FFFFFF;
+        background: none;
+        border: 1px solid #B04BB3;
+        box-sizing: border-box;
+        position: relative;
+    }
+    .button2 {
+        width: 140px;
+        height: 46px;
+        background: #FC0A7E;
+        border-radius: 3px;
+        color: white;
+        border: none;
+        position: relative;
+    }
     .mail_input {
-        width: 211px;
+        width: 161px;
         height: 50px;
         border: none;
         box-shadow: 0 0 0 #FC0A7E;
@@ -240,8 +266,15 @@
         font-size: 16px;
         line-height: 26px;
         padding-left: 20px;
-
     }
+    .buttons {
+        display: flex;
+        justify-content: space-around;
+        max-width: 371px;
+        padding-top: 40px;
+        margin: auto;
+        padding-bottom: 156px;
+}
     .mail_submit {
         width: 104px;
         height: 50px;
@@ -255,12 +288,11 @@
         font-size: 16px;
         line-height: 26px;
     }
+
     .about_items {
         font-weight: 400;
         font-size: 8px;
-
         text-decoration: none;
-
         color: #6B6B6B;
         padding-right: 30px;
         position: relative;
@@ -269,6 +301,14 @@
     }
     footer {
         margin-top: 26px;
+    }
+    .icons {
+        display: flex;
+        flex-direction: column;
+        max-width: 200px;
+        padding-top: 159px;
+        margin: auto;
+        text-align: center;
     }
 }
 
@@ -407,7 +447,14 @@
         font-size: 16px;
         line-height: 26px;
         padding-left: 20px;
-
+    }
+    .sixp_text {
+        padding-top: 168px;
+        font-weight: 400;
+        font-size: 20px;
+        line-height: 48px;
+        text-align: center;
+        color: #FFFFFF;
     }
     .mail_submit {
         width: 84px;
@@ -425,9 +472,7 @@
     .about_items {
         font-weight: 400;
         font-size: 8px;
-
         text-decoration: none;
-
         color: #6B6B6B;
         padding-right: 10px;
         position: relative;
@@ -438,5 +483,11 @@
     footer {
         margin-top: 26px;
     }
-
+    .icons {
+        display: flex;
+        flex-direction: column;
+        max-width: 1236px;
+        padding-top: 159px;
+        margin: auto;
+    }
 }
