--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ body {
 }
 .first_page {
     margin: auto;
-    max-width: 1440px;
+    max-width: 100%;
     background: url(../images/bg.png);
     background-size: cover;
 }
@@ -59,7 +59,7 @@ header {
 
 .main_fp {
     display: flex;
-    max-width: 80%;
+    max-width: 1152px;
     margin: auto;
     justify-content: space-between;
 }
@@ -312,18 +312,20 @@ header {
 }
 .six_page {
     margin: auto;
-    max-width: 1440px;
+    max-width: 100%;
     background: url(../images/bg.png);
     background-size: cover;
 }
 .bg_2 {
-    position: absolute;
-
+    background: url(../images/bg_2.svg);
+    max-width: 100%;
+    height: 480px
 }
+
 .sixp_main {
-    padding-top: 165px;
 }
 .sixp_text {
+    padding-top: 168px;
     font-weight: 400;
     font-size: 38px;
     line-height: 48px;
@@ -334,7 +336,7 @@ header {
     display: flex;
     justify-content: space-between;
     max-width: 371px;
-    padding-top: 40px;
+    padding-top: 30px;
     margin: auto;
     padding-bottom: 156px;
 }
